--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cypress-xpath": "^2.0.1"
   },
   "devDependencies": {
+    "@4tw/cypress-drag-drop": "^2.2.5",
     "@faker-js/faker": "^9.3.0",
+    "cypress-file-upload": "^5.0.8",
     "cypress-iframe": "^1.0.1",
     "xpath_cypress": "^2.0.0"
   }
